--- a/output.css
+++ b/output.css
@@ -626,11 +626,6 @@ video {
   margin-bottom: 3rem;
 }
 
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
 .-mt-4 {
   margin-top: -1rem;
 }
@@ -729,6 +724,10 @@ video {
 
 .w-\[85\%\] {
   width: 85%;
+}
+
+.w-\[88\%\] {
+  width: 88%;
 }
 
 .w-full {
@@ -919,11 +918,6 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
 }
 
 .pb-5 {
@@ -1369,6 +1363,10 @@ video {
     width: 50%;
   }
 
+  .md\:w-\[80\%\] {
+    width: 80%;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1453,6 +1451,10 @@ video {
 
   .lg\:w-\[88\%\] {
     width: 88%;
+  }
+
+  .lg\:w-\[85\%\] {
+    width: 85%;
   }
 
   .lg\:grid-cols-3 {
